[gd_scene load_steps=20 format=3 uid="uid://cev5i4xqwutps"]

[ext_resource type="Script" path="res://Assets/Scripts/selector.gd" id="1_qc4xq"]
[ext_resource type="Texture2D" uid="uid://d4bos338ajgve" path="res://Assets/images/objetos_escena/fondo_selector.png" id="2_4ojp6"]
[ext_resource type="Texture2D" uid="uid://bhe5l5r7majuo" path="res://Assets/images/botones/flecha.png" id="3_bwr5w"]
[ext_resource type="Texture2D" uid="uid://ccmx2dsmgfoqb" path="res://Assets/images/botones/flechaApretada.png" id="4_g7tbx"]
[ext_resource type="Script" path="res://Assets/Scripts/button_play.gd" id="4_yfli3"]
[ext_resource type="Texture2D" uid="uid://ccgemschbc47u" path="res://Assets/images/botones/flechaAtras.png" id="6_6vw02"]
[ext_resource type="PackedScene" uid="uid://bm8h7111buymy" path="res://scenes/personaje_2.tscn" id="7_ey31e"]
[ext_resource type="PackedScene" uid="uid://h5srt3ekb4hl" path="res://scenes/personaje_1.tscn" id="8_wsge6"]
[ext_resource type="Script" path="res://Assets/Scripts/btn_tiempo.gd" id="9_1nmdy"]
[ext_resource type="PackedScene" uid="uid://bxwokruvpvm64" path="res://scenes/pelota.tscn" id="9_egb23"]
[ext_resource type="Script" path="res://Assets/Scripts/btn_goles.gd" id="10_23dpk"]
[ext_resource type="Script" path="res://Assets/Scripts/btn_modo1.gd" id="11_448p2"]
[ext_resource type="Script" path="res://Assets/Scripts/btn_modo2.gd" id="12_jscyw"]
[ext_resource type="PackedScene" uid="uid://cokvpe8ebyqqa" path="res://scenes/options.tscn" id="13_5500p"]
[ext_resource type="AudioStream" uid="uid://1onbl5hniarv" path="res://Assets/Audio/Sonidos/BotonPlay-atras.mp3" id="15_iiyeo"]

[sub_resource type="SystemFont" id="SystemFont_a1ngq"]
font_names = PackedStringArray("On Fire Free Trial")
subpixel_positioning = 0

[sub_resource type="FontVariation" id="FontVariation_i6gwc"]
variation_embolden = 1.27

[sub_resource type="LabelSettings" id="LabelSettings_nvfib"]
line_spacing = 90.0
font = SubResource("FontVariation_i6gwc")
font_size = 90

[sub_resource type="SystemFont" id="SystemFont_ccpf6"]
font_names = PackedStringArray("On Fire Free Trial")
subpixel_positioning = 0

[node name="Selector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qc4xq")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1282.0
offset_bottom = 721.0
texture = ExtResource("2_4ojp6")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
offset_left = 380.0
offset_top = 34.0
offset_right = 901.0
offset_bottom = 378.0
color = Color(0.0980392, 0.0980392, 0.0980392, 0.733333)

[node name="mapa_rect" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.5
offset_top = -132.0
offset_right = 249.5
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 3

[node name="obstaculo_rect" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.5
offset_top = -132.0
offset_right = 249.5
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 3

[node name="btn_map_R" type="TextureButton" parent="ColorRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = -175.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("3_bwr5w")
texture_pressed = ExtResource("4_g7tbx")

[node name="btn_map_L" type="TextureButton" parent="ColorRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 175.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = -25.0
grow_vertical = 0
texture_normal = ExtResource("3_bwr5w")
texture_pressed = ExtResource("4_g7tbx")
flip_h = true

[node name="btn_map_R2" type="TextureButton" parent="ColorRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -340.0
offset_right = -175.0
offset_bottom = -315.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("3_bwr5w")
texture_pressed = ExtResource("4_g7tbx")

[node name="btn_map_L2" type="TextureButton" parent="ColorRect"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 175.0
offset_top = -340.0
offset_right = 200.0
offset_bottom = -315.0
grow_vertical = 0
texture_normal = ExtResource("3_bwr5w")
texture_pressed = ExtResource("4_g7tbx")
flip_h = true

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 116.0
offset_top = 420.0
offset_right = 349.0
offset_bottom = 620.0
grow_vertical = 2
pivot_offset = Vector2(0, 100)
color = Color(0.0980392, 0.0980392, 0.0980392, 0.733333)

[node name="btn_P1_R" type="TextureButton" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -184.0
offset_right = -10.0
offset_bottom = -159.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("3_bwr5w")
texture_pressed = ExtResource("4_g7tbx")

[node name="btn_P1_L" type="TextureButton" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -184.0
offset_right = 35.0
offset_bottom = -159.0
grow_vertical = 0
texture_normal = ExtResource("3_bwr5w")
texture_pressed = ExtResource("4_g7tbx")
flip_h = true

[node name="btn_P1_R2" type="TextureButton" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -45.0
offset_right = -10.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("3_bwr5w")
texture_pressed = ExtResource("4_g7tbx")

[node name="btn_P1_L2" type="TextureButton" parent="ColorRect2"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -45.0
offset_right = 35.0
offset_bottom = -20.0
grow_vertical = 0
texture_normal = ExtResource("3_bwr5w")
texture_pressed = ExtResource("4_g7tbx")
flip_h = true

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 932.0
offset_top = 420.0
offset_right = 1165.0
offset_bottom = 620.0
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(116, 100)
color = Color(0.0980392, 0.0980392, 0.0980392, 0.733333)

[node name="btn_P2_R" type="TextureButton" parent="ColorRect3"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -184.0
offset_right = -10.0
offset_bottom = -159.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("3_bwr5w")
texture_pressed = ExtResource("4_g7tbx")

[node name="btn_P2_L" type="TextureButton" parent="ColorRect3"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -184.0
offset_right = 35.0
offset_bottom = -159.0
grow_vertical = 0
texture_normal = ExtResource("3_bwr5w")
texture_pressed = ExtResource("4_g7tbx")
flip_h = true

[node name="btn_P2_R2" type="TextureButton" parent="ColorRect3"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -45.0
offset_right = -10.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("3_bwr5w")
texture_pressed = ExtResource("4_g7tbx")

[node name="btn_P2_L2" type="TextureButton" parent="ColorRect3"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -45.0
offset_right = 35.0
offset_bottom = -20.0
grow_vertical = 0
texture_normal = ExtResource("3_bwr5w")
texture_pressed = ExtResource("4_g7tbx")
flip_h = true

[node name="ColorRect4" type="ColorRect" parent="."]
layout_mode = 1
offset_left = 524.0
offset_top = 400.0
offset_right = 757.0
offset_bottom = 600.0
pivot_offset = Vector2(0, 100)
color = Color(0.0980392, 0.0980392, 0.0980392, 0.733333)

[node name="btn_pelota_R" type="TextureButton" parent="ColorRect4"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -45.0
offset_right = -10.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("3_bwr5w")
texture_pressed = ExtResource("4_g7tbx")

[node name="btn_pelota_L" type="TextureButton" parent="ColorRect4"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -45.0
offset_right = 35.0
offset_bottom = -20.0
grow_vertical = 0
texture_normal = ExtResource("3_bwr5w")
texture_pressed = ExtResource("4_g7tbx")
flip_h = true

[node name="personaje_2" parent="." instance=ExtResource("8_wsge6")]
position = Vector2(216, 503)

[node name="personaje_1" parent="." instance=ExtResource("7_ey31e")]
position = Vector2(1057, 503)

[node name="btn_play" type="Button" parent="."]
layout_mode = 1
offset_left = 559.897
offset_top = 620.0
offset_right = 720.102
offset_bottom = 697.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_a1ngq")
theme_override_font_sizes/font_size = 64
text = "PLAY"
alignment = 0
script = ExtResource("4_yfli3")

[node name="btn_vs" type="Control" parent="btn_play"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="btn_ia" type="Button" parent="btn_play/btn_vs"]
layout_mode = 2
offset_left = 178.0
offset_top = 16.0
offset_right = 435.0
offset_bottom = 93.0
pivot_offset = Vector2(257, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_a1ngq")
theme_override_font_sizes/font_size = 64
text = "PJ VS IA"
alignment = 0

[node name="btn_local" type="Button" parent="btn_play/btn_vs"]
layout_mode = 2
offset_left = -280.0
offset_top = 16.0
offset_right = -18.0
offset_bottom = 93.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_a1ngq")
theme_override_font_sizes/font_size = 64
text = "PJ VS PJ"
alignment = 0

[node name="Play" type="AudioStreamPlayer" parent="btn_play/btn_vs"]
stream = ExtResource("15_iiyeo")

[node name="btn_atras" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 75.0
offset_bottom = 75.0
texture_normal = ExtResource("6_6vw02")
ignore_texture_size = true
stretch_mode = 5

[node name="player1" type="Label" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 276.0
offset_right = 349.0
offset_bottom = 490.0
text = "P1
"
label_settings = SubResource("LabelSettings_nvfib")
horizontal_alignment = 1
vertical_alignment = 1

[node name="player2" type="Label" parent="."]
layout_mode = 0
offset_left = 932.0
offset_top = 276.0
offset_right = 1165.0
offset_bottom = 490.0
text = "P2"
label_settings = SubResource("LabelSettings_nvfib")
horizontal_alignment = 1
vertical_alignment = 1

[node name="pelota" parent="." instance=ExtResource("9_egb23")]
position = Vector2(642, 494)
scale = Vector2(2, 2)
freeze = true

[node name="VBoxTipos" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 100.0
offset_right = 368.0
offset_bottom = 258.0
metadata/_edit_group_ = true

[node name="btn_tiempo" type="Button" parent="VBoxTipos"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_ccpf6")
theme_override_font_sizes/font_size = 64
text = "TIME"
flat = true
script = ExtResource("9_1nmdy")

[node name="btn_goles" type="Button" parent="VBoxTipos"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_ccpf6")
theme_override_font_sizes/font_size = 64
text = "GOALS"
flat = true
script = ExtResource("10_23dpk")

[node name="VBoxModos" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 920.0
offset_top = 100.0
offset_right = 1297.0
offset_bottom = 258.0
scale = Vector2(0.739672, 1)
metadata/_edit_group_ = true

[node name="btn_modo1" type="Button" parent="VBoxModos"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_ccpf6")
theme_override_font_sizes/font_size = 64
text = "EXTRAS"
flat = true
script = ExtResource("11_448p2")

[node name="btn_modo2" type="Button" parent="VBoxModos"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_ccpf6")
theme_override_font_sizes/font_size = 64
text = "NO EXTRAS"
flat = true
script = ExtResource("12_jscyw")

[node name="options" parent="." instance=ExtResource("13_5500p")]
visible = false
layout_mode = 1

[connection signal="button_up" from="ColorRect/btn_map_R" to="." method="_on_btn_map_r_button_up"]
[connection signal="button_up" from="ColorRect/btn_map_L" to="." method="_on_btn_map_l_button_up"]
[connection signal="button_up" from="ColorRect/btn_map_R2" to="." method="_on_btn_map_r_2_button_up"]
[connection signal="button_up" from="ColorRect/btn_map_L2" to="." method="_on_btn_map_l_2_button_up"]
[connection signal="button_up" from="ColorRect2/btn_P1_R" to="." method="_on_btn_p_1_r_button_up"]
[connection signal="button_up" from="ColorRect2/btn_P1_L" to="." method="_on_btn_p_1_l_button_up"]
[connection signal="button_up" from="ColorRect2/btn_P1_R2" to="." method="_on_btn_p_1_r_2_button_up"]
[connection signal="button_up" from="ColorRect2/btn_P1_L2" to="." method="_on_btn_p_1_l_2_button_up"]
[connection signal="button_up" from="ColorRect3/btn_P2_R" to="." method="_on_btn_p_2_r_button_up"]
[connection signal="button_up" from="ColorRect3/btn_P2_L" to="." method="_on_btn_p_2_l_button_up"]
[connection signal="button_up" from="ColorRect3/btn_P2_R2" to="." method="_on_btn_p_2_r_2_button_up"]
[connection signal="button_up" from="ColorRect3/btn_P2_L2" to="." method="_on_btn_p_2_l_2_button_up"]
[connection signal="button_up" from="ColorRect4/btn_pelota_R" to="." method="_on_btn_pelota_r_button_up"]
[connection signal="button_up" from="ColorRect4/btn_pelota_L" to="." method="_on_btn_pelota_l_button_up"]
[connection signal="button_up" from="btn_play" to="btn_play" method="_on_button_up"]
[connection signal="button_up" from="btn_play/btn_vs/btn_ia" to="." method="_on_btn_ia_button_up"]
[connection signal="button_up" from="btn_play/btn_vs/btn_local" to="." method="_on_btn_local_button_up"]
[connection signal="finished" from="btn_play/btn_vs/Play" to="." method="_on_play_finished"]
[connection signal="button_up" from="btn_atras" to="." method="_on_btn_atras_button_up"]
[connection signal="button_up" from="VBoxTipos/btn_tiempo" to="VBoxTipos/btn_tiempo" method="_on_button_up"]
[connection signal="button_up" from="VBoxTipos/btn_tiempo" to="VBoxTipos/btn_goles" method="_on_btn_tiempo_button_up"]
[connection signal="button_up" from="VBoxTipos/btn_goles" to="VBoxTipos/btn_tiempo" method="_on_btn_goles_button_up"]
[connection signal="button_up" from="VBoxTipos/btn_goles" to="VBoxTipos/btn_goles" method="_on_button_up"]
[connection signal="button_up" from="VBoxModos/btn_modo1" to="VBoxModos/btn_modo1" method="_on_button_up"]
[connection signal="button_up" from="VBoxModos/btn_modo1" to="VBoxModos/btn_modo2" method="_on_btn_modo_1_button_up"]
[connection signal="button_up" from="VBoxModos/btn_modo2" to="VBoxModos/btn_modo1" method="_on_btn_modo_2_button_up"]
[connection signal="button_up" from="VBoxModos/btn_modo2" to="VBoxModos/btn_modo2" method="_on_button_up"]
